# CodeReviewAI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schemas.py  tools.py
tests/: test_review.py
