[tool.poetry]
name = "CodeReviewAI"
version = "0.1.0"
description = "Test project"
authors = ["t_s_e_z_a_r <tsezgal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
requests = "^2.32.0"
pydantic = "^2.3.0"
google-cloud-aiplatform = "^1.49.0"
vertexai = "^1.49.0"
redis = "^5.0.0"
python-decouple = "^3.8"
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
